test-canary/old.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: base-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: base-app
  template:
    metadata:
      labels:
        app: base-app
    spec:
      containers:
      - name: base-app
        image: public.ecr.aws/l6m2t8p7/docker-2048:latest
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: base-svc
  labels:
    app: base-app
spec:
  type: ClusterIP
  selector:
    app: base-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
